--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 networkx
 flask
 Pillow
-numpy==1.14.2
+numpy
 opencv-python
 pyyaml
 easydict
@@ -12,6 +12,6 @@ boto3
 xcffib
 mss
 progressbar2
-tensorflow-gpu==1.5.0
+tensorflow-gpu
 requests
 ai2thor==0.0.34
